--- a/app/scss/main.768-1023.scss
+++ b/app/scss/main.768-1023.scss
@@ -5,7 +5,7 @@
     .description-box{
         margin-left: 0 !important;
         text-align: center;
-        margin-top: 150px !important;
+        margin-top: 9.375rem !important;
         max-width: 100% !important;
         .title{
             max-width: 100% !important;
@@ -15,7 +15,7 @@
 
         .text{
             max-width: 100% !important;
-            margin-top: 5px !important;
+            margin-top: 0.3125rem !important;
             font-size: 0.8rem !important;  
         }
     }
@@ -24,7 +24,7 @@
         background-position: left center !important;
 
         .description-box{
-            margin-top: 220px !important;
+            margin-top: 13.75rem !important;
         }
     }
 
@@ -40,12 +40,12 @@
 
         .first-part{
             .description-box{
-                margin-top: 70px !important;
+                margin-top: 4.375rem !important;
             }
         }
         
         .image-box{
-            margin-top: 80px;
+            margin-top: 5rem;
             text-align: center;
         }
 
@@ -53,12 +53,12 @@
             margin-top: 0 !important;
 
             .description-box{
-                padding-left: 0px !important;
-                margin-top: 70px !important;
+                padding-left: 0rem !important;
+                margin-top: 4.375rem !important;
             }
 
             .image-box{
-                max-width: 306px;
+                max-width: 19.125rem;
                 margin-right: auto;
                 margin-left: auto;
             }
