--- a/app/assets/main.320-767.css
+++ b/app/assets/main.320-767.css
@@ -1,11 +1,11 @@
 @media (min-width: 320px) and (max-width: 767px) {
   .description-box {
-    padding-left: 9px !important;
-    padding-right: 9px !important;
+    padding-left: 0.5625rem !important;
+    padding-right: 0.5625rem !important;
     margin-left: 0 !important; }
     .description-box a.button {
-      padding-top: 11px !important;
-      padding-bottom: 11px !important;
+      padding-top: 0.6875rem !important;
+      padding-bottom: 0.6875rem !important;
       padding-left: 0 !important;
       padding-right: 0 !important;
       display: block;
@@ -15,35 +15,35 @@
     #how_it_works .description-box .title, #without_calls_and_sms .description-box .title, #progress .description-box .title, #motivation .description-box .title {
       font-size: 1.4375rem !important;
       line-height: 1.5rem !important;
-      letter-spacing: 0.019em; }
+      letter-spacing: 0.019rem; }
     #how_it_works .description-box .text, #without_calls_and_sms .description-box .text, #progress .description-box .text, #motivation .description-box .text {
       font-size: 0.875rem !important;
       line-height: 1rem !important;
-      letter-spacing: 0.01em;
-      margin-bottom: 18px !important; }
+      letter-spacing: 0.01rem;
+      margin-bottom: 1.125rem !important; }
   #header {
     background: url(../images/header_bg-small.png) no-repeat !important;
-    height: 525px !important;
+    height: 32.8125rem !important;
     background-size: cover !important; }
     #header .logo-box {
-      padding-left: 9px;
-      margin-top: 23px !important; }
+      padding-left: 0.5625rem;
+      margin-top: 1.4375rem !important; }
       #header .logo-box .br-r, #header .logo-box .logo-description {
         display: none; }
       #header .logo-box .logo img {
-        width: 150px; }
+        width: 9.375rem; }
     #header .description-box {
-      margin-top: 200px !important; }
+      margin-top: 12.5rem !important; }
       #header .description-box .title {
         font-size: 2.875rem !important;
         line-height: 2.9375rem !important; }
       #header .description-box .text {
-        margin-top: 10px !important;
-        margin-bottom: 26px !important;
+        margin-top: 0.625rem !important;
+        margin-bottom: 1.625rem !important;
         font-size: 1rem !important;
         line-height: 1.1875rem !important;
-        max-width: 285px !important;
-        letter-spacing: 0.040em !important; }
+        max-width: 17.8125rem !important;
+        letter-spacing: 0.040rem !important; }
   #how_it_works .justify-content-between {
     -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
@@ -51,21 +51,21 @@
   #how_it_works .rectangle {
     display: none; }
   #how_it_works .first-part .description-box {
-    margin-top: 42px !important; }
+    margin-top: 2.625rem !important; }
   #how_it_works .first-part .image-box {
-    margin-top: 40px !important; }
+    margin-top: 2.5rem !important; }
     #how_it_works .first-part .image-box img {
-      max-width: 325px !important; }
+      max-width: 20.3125rem !important; }
     #how_it_works .first-part .image-box .author .name {
       font-size: 0.625rem !important;
       line-height: 0.6875rem !important;
-      letter-spacing: 0.019em !important; }
+      letter-spacing: 0.019rem !important; }
     #how_it_works .first-part .image-box .author img {
-      width: 17px !important;
-      height: 17px !important; }
+      width: 1.0625rem !important;
+      height: 1.0625rem !important; }
   #how_it_works .second-part {
-    margin-top: 57px !important;
-    margin-bottom: 55px !important; }
+    margin-top: 3.5625rem !important;
+    margin-bottom: 3.4375rem !important; }
     #how_it_works .second-part .image-box {
       margin-top: 0 !important;
       text-align: center;
@@ -74,35 +74,35 @@
       max-width: 247px !important; }
       #how_it_works .second-part .image-box .slider {
         max-width: 247px !important;
-        height: 438px;
-        width: 241px !important; }
+        height: 27.375rem;
+        width: 15.0625rem !important; }
         #how_it_works .second-part .image-box .slider .slider-nav {
-          top: 118px !important; }
+          top: 7.375rem !important; }
           #how_it_works .second-part .image-box .slider .slider-nav p.slider-nav-link {
             font-size: 0.6rem !important;
-            margin-right: 6px !important; }
+            margin-right: 0.375rem !important; }
         #how_it_works .second-part .image-box .slider .slides-box {
-          height: 274px !important;
-          width: 241px !important;
-          top: 122px !important; }
+          height: 17.125rem !important;
+          width: 15.0625rem !important;
+          top: 7.625rem !important; }
           #how_it_works .second-part .image-box .slider .slides-box .slide img {
             height: 100% !important; }
       #how_it_works .second-part .image-box img {
-        border: 1px solid #DDDDDD;
-        width: 247px !important;
-        height: 438px !important; }
+        border: 0.0625rem solid #DDDDDD;
+        width: 15.4375rem !important;
+        height: 27.375rem !important; }
     #how_it_works .second-part .description-box {
-      margin-top: 40px !important; }
+      margin-top: 2.5rem !important; }
   #progress {
-    height: 525px !important;
+    height: 32.8125rem !important;
     background: url(../images/progress-bg-xs.png) no-repeat !important;
     background-size: cover !important; }
     #progress .description-box {
-      margin-top: 320px !important; }
+      margin-top: 20rem !important; }
       #progress .description-box .text {
-        margin-bottom: 25px !important; }
+        margin-bottom: 1.5625rem !important; }
   #without_calls_and_sms {
-    height: 545px !important; }
+    height: 34.0625rem !important; }
     #without_calls_and_sms .align-items-center {
       -webkit-box-align: start !important;
           -ms-flex-align: start !important;
@@ -110,50 +110,50 @@
     #without_calls_and_sms .image-box {
       margin-left: auto;
       margin-right: auto;
-      margin-top: 44px; }
+      margin-top: 2.75rem; }
       #without_calls_and_sms .image-box img {
-        max-width: 325px !important;
-        max-height: 240px !important; }
+        max-width: 20.3125rem !important;
+        max-height: 15rem !important; }
     #without_calls_and_sms .description-box {
-      margin-top: -15px !important; }
+      margin-top: -0.9375rem !important; }
   #motivation {
-    height: 390px !important;
+    height: 24.375rem !important;
     background: url(../images/motivation-bg-xs.png) no-repeat !important;
     background-size: cover !important; }
     #motivation .description-box {
-      margin-top: 145px !important; }
+      margin-top: 9.0625rem !important; }
       #motivation .description-box .text {
-        margin-top: 15px !important;
-        margin-bottom: 26px !important; }
+        margin-top: 0.9375rem !important;
+        margin-bottom: 1.625rem !important; }
   #coaches {
-    height: 400px !important; }
+    height: 25rem !important; }
     #coaches .owl-carousel {
-      margin-top: 50px !important; }
+      margin-top: 3.125rem !important; }
     #coaches .owl-dots {
-      margin-top: 38px !important; }
+      margin-top: 2.375rem !important; }
     #coaches .card {
-      padding: 0 9px; }
+      padding: 0 0.5625rem; }
   #footer {
     height: 100% !important; }
     #footer .description-box {
-      margin-top: 36px !important; }
+      margin-top: 2.25rem !important; }
       #footer .description-box .title {
         font-size: 2.5rem !important;
         line-height: 2.5625rem !important; }
       #footer .description-box .text {
-        margin-bottom: 24px !important; }
+        margin-bottom: 1.5rem !important; }
     #footer .mt-15 {
-      padding-left: 25px;
-      padding-right: 25px; }
+      padding-left: 1.5625rem;
+      padding-right: 1.5625rem; }
     #footer .hr {
-      margin-top: 25px !important; }
+      margin-top: 1.5625rem !important; }
     #footer .socials {
-      margin-bottom: 32px !important; }
+      margin-bottom: 2rem !important; }
     #footer .socials, #footer .links-box, #footer .copyrights {
-      padding-left: 9px;
-      padding-right: 9px; }
+      padding-left: 0.5625rem;
+      padding-right: 0.5625rem; }
     #footer .copyrights {
-      margin-bottom: 17px; } }
+      margin-bottom: 1.0625rem; } }
 
 @media (min-width: 320px) and (max-width: 374px) {
   #header .description-box .title, #footer .description-box .title {
@@ -162,6 +162,6 @@
   #header .copyrights, #footer .copyrights {
     font-size: 0.7rem !important; }
   #how_it_works .first-part .image-box img {
-    max-width: 290px !important; }
+    max-width: 18.125rem !important; }
   #without_calls_and_sms .image-box img {
-    max-width: 290px !important; } }
+    max-width: 18.125rem !important; } }
