--- a/app/assets/subscription-succes.320-767.css
+++ b/app/assets/subscription-succes.320-767.css
@@ -2,62 +2,62 @@
   #header_subscription, #header_success {
     height: 100% !important; }
     #header_subscription .logo-box, #header_success .logo-box {
-      margin-top: 21px !important;
-      padding-left: 9px; }
+      margin-top: 1.3125rem !important;
+      padding-left: 0.5625rem; }
       #header_subscription .logo-box .br-r, #header_subscription .logo-box .logo-description, #header_success .logo-box .br-r, #header_success .logo-box .logo-description {
         display: none; }
       #header_subscription .logo-box .logo img, #header_success .logo-box .logo img {
-        width: 150px; }
+        width: 9.375rem; }
     #header_subscription .header-title-box, #header_success .header-title-box {
-      max-width: 244px !important;
-      padding-left: 9px;
-      margin-top: 55px !important; }
+      max-width: 15.25rem !important;
+      padding-left: 0.5625rem;
+      margin-top: 3.4375rem !important; }
       #header_subscription .header-title-box .title, #header_success .header-title-box .title {
         font-size: 1.4375rem !important;
         line-height: 1.5rem !important;
-        letter-spacing: 0.019em !important; }
+        letter-spacing: 0.019rem !important; }
       #header_subscription .header-title-box .description, #header_success .header-title-box .description {
         font-size: 1rem !important;
-        margin-bottom: 30px; }
+        margin-bottom: 1.875rem; }
   #header_success .header-title-box {
-    margin-top: 80px !important; }
+    margin-top: 5rem !important; }
   #content {
     height: 100% !important; }
     #content .pl-none {
-      padding-right: 15px !important; }
+      padding-right: 0.3125rem !important; }
     #content form {
-      margin-top: 28px !important;
-      padding-left: 9px;
-      padding-right: 9px; }
+      margin-top: 1.75rem !important;
+      padding-left: 0.5625rem;
+      padding-right: 0.5625rem; }
       #content form .label {
-        max-width: 295px !important;
-        margin-top: 4px; }
+        max-width: 18.4375rem !important;
+        margin-top: 0.25rem; }
       #content form .checkbox-custom {
-        top: -17px !important; }
+        top: -1.0625rem !important; }
       #content form .button {
-        margin-top: 16px !important;
+        margin-top: 1rem !important;
         display: block !important;
         padding-left: 0 !important;
         padding-right: 0 !important;
         width: 100%;
-        margin-bottom: 115px; }
+        margin-bottom: 7.1875rem; }
     #content .social-box {
-      margin-top: 24px !important;
-      padding-left: 9px;
-      padding-right: 9px; }
+      margin-top: 1.5rem !important;
+      padding-left: 0.5625rem;
+      padding-right: 0.5625rem; }
       #content .social-box .title {
         font-size: 1.4375rem !important;
         line-height: 1.5rem !important;
-        letter-spacing: 0.019em !important; }
+        letter-spacing: 0.019rem !important; }
       #content .social-box .social-buttons {
-        margin-bottom: 118px; }
+        margin-bottom: 7.375rem; }
         #content .social-box .social-buttons a {
           max-width: 100% !important; }
   #footer h100
 .socials {
-    margin-top: 18px !important; }
+    margin-top: 1.125rem !important; }
   #footer .socials, #footer .links-box, #footer .copyrights {
-    padding-left: 22px !important; } }
+    padding-left: 1.375rem !important; } }
 
 @media (min-width: 320px) and (max-width: 375px) {
   .social-buttons a {
