--- a/app/assets/succes.css
+++ b/app/assets/succes.css
@@ -1,30 +1,30 @@
 #content .social-box {
-  margin-top: 75px; }
+  margin-top: 4.6875rem; }
   #content .social-box .title {
-    max-width: 350px;
+    max-width: 21.875rem;
     font-family: 'Roboto-bold';
     font-size: 1.5rem;
     line-height: 1.75rem; }
   #content .social-box .social-buttons {
-    margin-top: 25px; }
+    margin-top: 1.5625rem; }
     #content .social-box .social-buttons a {
       position: relative;
-      border-radius: 10px;
-      margin-bottom: 10px;
+      border-radius: 0.625rem;
+      margin-bottom: 0.625rem;
       max-width: 290px;
       display: block;
       font-size: 1.125rem;
       line-height: 1.3125rem;
       color: #fff;
       font-family: 'Roboto-bold';
-      padding: 12px 0 12px 43px; }
+      padding: 0.75rem 0 0.75rem 2.6875rem; }
       #content .social-box .social-buttons a::before {
         content: '';
         position: absolute;
-        width: 26px;
-        height: 25px;
-        top: 9px;
-        left: 11px; }
+        width: 1.625rem;
+        height: 1.5625rem;
+        top: 0.5625rem;
+        left: 0.6875rem; }
       #content .social-box .social-buttons a:hover {
         text-decoration: none;
         color: #dcdcdc; }
