--- a/app/scss/main.1024-1279.scss
+++ b/app/scss/main.1024-1279.scss
@@ -13,33 +13,33 @@
 
             .text{
                 margin-top: 0 !important;
-                margin-bottom: 20px !important;
+                margin-bottom: 1.25rem !important;
                 font-size: 0.85rem !important;
             }
 
             .button{
                 font-size: 0.9rem !important;
                 line-height: 1.1rem !important; 
-                padding: 10px 15px;
+                padding: 0.625rem 0.9375rem;
             }
         }
     }
     
     #header{
-        height: 400px !important;
+        height: 25rem !important;
         background-size: 120% !important;
         
         .jcc {
             justify-content: space-between !important;
         }
         .logo-box{
-            margin-left: 42px;
+            margin-left: 2.625rem;
         }
 
         .description-box{
-            margin-top: 70px !important;
-            max-width: 290px !important;
-            margin-left: 42px;
+            margin-top: 4.375rem!important;
+            max-width: 18.125rem !important;
+            margin-left: 2.625rem;
         }
     }
 
@@ -48,40 +48,40 @@
         .first-part{
             
             .description-box{
-                max-width: 320px;
+                max-width: 20rem;
                 
                 .title{
                     font-size: 1.5rem !important;
                     line-height: 1.8rem !important;
-                    margin-bottom: 5px;
+                    margin-bottom: 0.3125rem;
                 }
 
             }
         }
 
         .second-part {
-            margin-top: -190px !important;
+            margin-top: -11.875rem !important;
             
             .image-box{
                 img.slide-box {
-                    width: 280px !important;
-                    height: 480px !important;
+                    width: 17.5rem !important;
+                    height: 30rem !important;
                 } 
             }
 
             .description-box{
-                max-width: 450px;
+                max-width: 28.125rem;
                 
                 .title{
                     font-size: 1.5rem !important;
                     line-height: 1.8rem !important;
-                    margin-bottom: 5px;
+                    margin-bottom: 0.3125rem;
                 }
             }
         }
         
         .rectangle{
-            height: 480px !important;
+            height: 30rem !important;
         }
         
         .justify-content-between{
@@ -90,42 +90,42 @@
     }
 
     #progress{
-        height: 400px !important;
+        height: 25rem !important;
         background-position: 35% center !important;
         background-size: cover !important;
 
         .description-box{
-            margin-top: 127px !important;
-            margin-left: 42px;
+            margin-top: 7.9375rem !important;
+            margin-left: 2.625rem;
             .title{
                 font-size: 1.5rem !important;
                 line-height: 1.8rem !important;
-                margin-bottom: 5px;
+                margin-bottom: 0.3125rem;
             }
 
             .text{
                 margin-top: 0 !important;
-                margin-bottom: 20px !important;
+                margin-bottom: 1.25rem !important;
                 font-size: 0.85rem !important;
             }
 
             .button{
                 font-size: 0.9rem !important;
                 line-height: 1.1rem !important; 
-                padding: 10px 15px;
+                padding: 0.625rem 0.9375rem;
             }
         }
     }
 
     #without_calls_and_sms{
-        height: 400px !important;
+        height: 25rem !important;
         
         .image-box{
-            margin-left: 42px;
+            margin-left: 2.625rem;
             
             img{
-               width: 330px !important;
-               height: 280px !important; 
+               width: 20.625rem !important;
+               height: 17.5rem !important; 
             }
         }
 
@@ -133,84 +133,84 @@
             .title{
                 font-size: 1.5rem !important;
                 line-height: 1.8rem !important;
-                margin-bottom: 5px;
+                margin-bottom: 0.3125rem;
             }
 
             .text{
                 margin-top: 0 !important;
-                margin-bottom: 20px !important;
+                margin-bottom: 1.25rem !important;
                 font-size: 0.85rem !important;
             }
 
             .button{
                 font-size: 0.9rem !important;
                 line-height: 1.1rem !important; 
-                padding: 10px 15px;
+                padding: 0.625rem 0.9375rem;
             }
         }
     }
 
     #motivation{
-        height: 400px !important;
+        height: 25rem !important;
         background-position: right center !important;
         background-size: cover !important;
 
         .description-box{
-            margin-top: -10px !important ;
-            margin-left: 42px;
+            margin-top: -0.625rem !important ;
+            margin-left: 2.625rem;
             .title{
                 font-size: 1.5rem !important;
                 line-height: 1.8rem !important;
-                margin-bottom: 5px;
+                margin-bottom: 0.3125rem;
             }
 
             .text{
                 margin-top: 0 !important;
-                margin-bottom: 20px !important;
+                margin-bottom: 1.25rem !important;
                 font-size: 0.85rem !important;
             }
 
             .button{
                 font-size: 0.9rem !important;
                 line-height: 1.1rem !important; 
-                padding: 10px 15px;
+                padding: 0.625rem 0.9375rem;
             }
         }
     }
 
     #footer{
-        height: 555px !important;
+        height: 34.6875rem !important;
 
         .description-box{
             
-            margin-left: 42px;
+            margin-left: 2.625rem;
             .title{
                 font-size: 1.5rem !important;
                 line-height: 1.8rem !important;
-                margin-bottom: 5px;
+                margin-bottom: 0.3125rem;
             }
 
             .text{
                 margin-top: 0 !important;
-                margin-bottom: 20px !important;
+                margin-bottom: 1.25rem !important;
                 font-size: 0.85rem !important;
             }
 
             .button{
                 font-size: 0.9rem !important;
                 line-height: 1.1rem !important; 
-                padding: 10px 15px;
+                padding: 0.625rem 0.9375rem;
             }
         }
 
         .hr{
-            margin-top: 65px !important;
-            margin-left: -38px;
-            width: 842px;
+            margin-top: 4.0625rem !important;
+            margin-left: -2.375rem;
+            width: 52.625rem;
         }
 
         .socials , .links-box, .copyrights{
-            margin-left: 42px;
+            margin-left: 2.625rem;
         }
     }
 }
