--- a/app/scss/subscription.scss
+++ b/app/scss/subscription.scss
@@ -1,5 +1,5 @@
 #header_subscription, #header_success{
-    height: 335px;
+    height: 20.9375rem;
     background: #CCFF00;
 
     .logo-box{
@@ -10,22 +10,22 @@
     }
 
     .header-title-box{
-        margin-top: 105px;
-        max-width: 400px;
+        margin-top: 6.5625rem;
+        max-width: 25rem;
 
         .title{
             color: #000;
             font-size: 3rem;
             line-height: 3.1875rem;
-            letter-spacing: 0.012em;
+            letter-spacing: 0.012rem;
             font-family: 'Roboto-bold';
         }
 
         .description{
-            margin-top: 8px;
+            margin-top: 0.5rem;
             color: #000;
             opacity: 0.5;
-            letter-spacing: 0.02em;
+            letter-spacing: 0.02rem;
             font-size: 1rem;
         }
     }
@@ -33,23 +33,23 @@
 
 #content{
     background: #fff;
-    height: 480px;
+    height: 30rem;
 
     .pl-none{
         padding-right: 0;
     }
 
     form{
-        margin-top: 45px;
-        max-width: 430px;
+        margin-top: 2.8125rem;
+        max-width: 26.875rem;
 
         .form-control{
-            padding: 9px 20px;
-            height: 45px;
-            border-radius: 8px;
+            padding: 0.5625rem 1.25rem;
+            height: 2.8125rem;
+            border-radius: 0.5rem;
             border-color: #ADADAD;
             color: #222326;
-            letter-spacing: 0.02em;
+            letter-spacing: 0.02rem;
 
             &::placeholder{
                 color: #222326;
@@ -57,18 +57,18 @@
         }
 
         label{
-            margin-top: 10px;
+            margin-top: 0.625rem;
             .checkbox {
                 display: none;
             }
     
             .checkbox-custom {
                 position: relative;
-                top: -1px;   
-                width: 24px;           
-                height: 24px;           
-                border: 1px solid #ADADAD;
-                border-radius: 4px;
+                top: -0.0625rem;   
+                width: 1.5rem;           
+                height: 1.5rem;           
+                border: 0.0625rem solid #ADADAD;
+                border-radius: 0.25rem;
             }
             
             .checkbox-custom, .label {
@@ -77,34 +77,34 @@
             }
             
             .label{
-                max-width: 390px;
+                max-width: 24.375rem;
                 color: #4c4c4c;
                 font-size: 0.75rem;
                 line-height: 0.9375rem;
-                letter-spacing: 0.02em;
+                letter-spacing: 0.02rem;
             }
            
             .checkbox:checked + .checkbox-custom::before {
                 content: "✔";            
                 display: block;			
                 position: absolute;   
-                left: 3px;
-                top: -2px;
+                left: 0.1875rem;
+                top: -0.125rem;
                 font-size: 1.1rem;
             }
         }
         
         .button{
             cursor: pointer;
-            margin-top: 40px;
+            margin-top: 2.5rem;
             background: #CCFF00;
             display: block;
-            padding: 12px 44px;
+            padding: 0.75rem 2.75rem;
             font-family: 'Roboto-bold';
             font-size: 	1.125rem;
             line-height: 1.3125rem;
-            box-shadow: 0px 0.5px 0px #000000;
-            border-radius: 10px;
+            box-shadow: 0 0.03125rem 0 #000000;
+            border-radius: 0.625rem;
             border: none;
 
         }
@@ -112,5 +112,5 @@
 }
 
 .footer_subscription{
-    height: 270px !important;
+    height: 16.875rem !important;
 }
